added/modified more IPython notebooks

--- a/notebooks/CompCarsNet.ipynb
+++ b/notebooks/CompCarsNet.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Recognition with Caffe using ImageNet \n",
+    "# Car make and model Recognition with Caffe using GoogLeNet \n",
     "\n",
-    "An image is recognised with the bundled CaffeNet model based on the network architecture of Krizhevsky et al. for ImageNet with 1000 categories. It is assumed that this notebook is in /deeplearning/notebooks/."
+    "It is assumed that this notebook is in /deeplearning/notebooks/."
    ]
   },
   {
@@ -41,28 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/deeplearning/Models/GoogLeNet_cars/googlenet_finetune_web_car_iter_10000.caffemodel\n"
+     ]
+    }
+   ],
    "source": [
     "# Make sure that caffe is on the python path:\n",
     "caffe_root = '/opt/caffe/'  \n",
     "models_path = '/deeplearning/Models/'\n",
+    "data_path = '/deeplearning/Datasets/'\n",
     "sys.path.insert(0, caffe_root + 'python')\n",
     "# model location\n",
-    "model_path  = models_path + 'GoogLeNet_cars'\n",
-    "model_conf_name  = 'solver_googlenet.prototxt'\n",
+    "model_path  = 'GoogLeNet_cars/'\n",
+    "model_conf_name  = 'deploy_googlenet.prototxt'\n",
     "model_name = 'googlenet_finetune_web_car_iter_10000.caffemodel'\n",
     "model_configuration = models_path + model_path + model_conf_name\n",
     "model = models_path + model_path + model_name\n",
+    "print model\n",
     "# download script\n",
     "#download_script = '../scripts/download_model_binary.py'\n",
     "# mean pixel file\n",
     "mean_pixel_file  = caffe_root + 'python/caffe/imagenet/ilsvrc_2012_mean.npy'\n",
     "# ImageNet labels filename\n",
-    "imagenet_labels_filename = caffe_root + 'data/ilsvrc12/synset_words.txt'\n",
+    "#imagenet_labels_filename = caffe_root + 'data/ilsvrc12/synset_words.txt'\n",
     "# get labels script\n",
     "#get_labels = '!/opt/caffe/data/ilsvrc12/get_ilsvrc_aux.sh'"
    ]
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -135,10 +145,11 @@
     "batch_size =50\n",
     "channels  = 3\n",
     "gray_range = 255\n",
-    "image_size = 227\n",
-    "input_images_path = 'examples/images/'\n",
-    "input_fname = 'cat.jpg'\n",
-    "input_image_file = caffe_root + input_images_path + input_fname"
+    "image_size = 224\n",
+    "input_images_path = 'DemoImages/'\n",
+    "input_fname = 'chrysler-delta-1_256.jpg'\n",
+    "#input_image_file = caffe_root + input_images_path + input_fname\n",
+    "input_image_file = data_path + input_images_path + input_fname"
    ]
   },
   {
